--- a/build.gradle
+++ b/build.gradle
@@ -16,17 +16,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'junit:junit:4.12'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation 'org.projectlombok:lombok'
 	testCompile "org.projectlombok:lombok"
 	annotationProcessor('org.projectlombok:lombok')
-	testAnnotationProcessor('org.projectlombok:lombok')
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    testAnnotationProcessor('org.projectlombok:lombok')
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.h2database:h2'
 
 	compile 'org.springframework.boot:spring-boot-starter-mustache'
+	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+	compile('org.springframework.session:spring-session-jdbc')
 
 }
 
