--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,28 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.9.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
 }
 
 group = 'spring'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
-
 repositories {
 	mavenCentral()
+	jcenter()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'junit:junit:4.12'
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'junit:junit:4.12'
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.projectlombok:lombok')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.boot:spring-boot-starter-mustache')
+	compile('com.h2database:h2')
 
-	implementation 'org.projectlombok:lombok'
-	testCompile "org.projectlombok:lombok"
-	annotationProcessor('org.projectlombok:lombok')
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
-    testAnnotationProcessor('org.projectlombok:lombok')
-
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.h2database:h2'
-
-	compile 'org.springframework.boot:spring-boot-starter-mustache'
 	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
 	compile('org.springframework.session:spring-session-jdbc')
 
-}
+	compile("org.mariadb.jdbc:mariadb-java-client")
 
-test {
-	useJUnitPlatform()
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile("org.springframework.security:spring-security-test")
 }
