Travis CI, S3, CodeDeploy 연동 수정 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ deploy:
     key : spring_web_service.zip
 
     bundle_type : zip
-    application : spring_web_service
+    application : freelec-springboot2-webservice
 
     deplyment_group : springboot-webservice-group
     region: ap-northeast-2
