--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'java'
 }
 
+version '1.0.1-SNAPSHOT-' + new Date().format("yyyyMMddHHmmss")
 group = 'spring'
 repositories {
 	mavenCentral()
